[WangMin] fix-5: delete the last vertical line behind the list item

--- a/main.css
+++ b/main.css
@@ -57,6 +57,11 @@ body {
     right: -12px;
 }
 
+ul > li:last-child::after {
+    contain: "";
+    border: none;
+}
+
 .down-nav li::after {
     content: "";
     position: absolute;
